--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "@types/node": "^17.0.45",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "file-system": "github:TuncayBasak25/file-system"
   }
 }
